# well_thats_just_prime

./: CMakeLists.txt  README.md  main.cpp
src/: prime.cpp  prime.hpp
tests/: prime_test.cpp
